# notify-utils

./: Cargo.toml
src/notify-date/: main.rs
src/notify-time/: main.rs
